# libft42

./: CMakeLists.txt  Makefile  README.md  a.out  autheur  clion  libft.h  main.c
arr/: arrays.h  ft_min.c
file/: file.h  ft_fclose.c  ft_fcreate.c  ft_fopen.c
get_next_line/: get_next_line.c  get_next_line.h  message_queue.c  queue.c  queue.h  queue_op.c
is/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c
lst/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  list.h
math/: fibonacci.c  math.c  math.h  out
mem/: ft_bzero.c  ft_calloc.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memcpy1.c  ft_memdel.c  ft_memmove.c  ft_memset.c
put/: ft_itoa.c  ft_print_bits.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_split.c  ft_strsplit.c
str/: ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strncpy.c  ft_strndup.c  ft_strnew.c  ft_strnlen.c  ft_strnstr.c  ft_strrchr.c  ft_strrev.c  ft_strstr.c  ft_strtriml.c  ft_strtrimr.c  ft_trim.c
strarr/: ft_contains.c  ft_count_words.c  ft_cwchar.c  sizearr.c
strequ/: ft_strequ.c  ft_strnequ.c
string/: ft_str_is_alpha.c  ft_str_is_empty.c  ft_str_is_lowercase.c  ft_str_is_numeric.c  ft_str_is_printable.c  ft_str_is_uppercase.c  ft_strupcase.c  remove_spaces.c  replace_char.c  replace_with_space.c  string_functions.h
striter/: ft_striter.c  ft_striterator.c  ft_striteri.c  ft_strmap.c  ft_strmapi.c
strsub/: ft_strjoin.c  ft_strsub.c  ft_strtrim.c  ft_substr.c
to/: ft_atoi.c  ft_atoi_max.c  ft_tolower.c  ft_toupper.c
tree/: binary_tree_with_array.c  rb_tree.c  tree.c  tree.h  tree_construct.c  tree_construct_i.c  tree_i.c  tree_straversal.c
